# 272_rust_chat_app

./: Cargo.toml  Dockerfile  README.md
axum_backend/: Cargo.toml
axum_backend/src/: main.rs
wasm_frontend/: Cargo.toml
wasm_frontend/src/: lib.rs
