[package]
name = "wasm_frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.55"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.4"
web-sys = { version = "0.3", features = ["WebSocket", "Window", "console", "Document", "DomTokenList", "Element", "HtmlInputElement", "KeyboardEvent"] }
